--- a/package.json
+++ b/package.json
@@ -1,30 +1,26 @@
 {
   "name": "audityzer-auditorsec-integration",
   "version": "1.0.0",
-  "description": "Integration platform for Audityzer and AuditorSEC Web3 smart contract audit",
-  "private": true,
-  "workspaces": [
-    "client",
-    "server"
-  ],
+  "description": "Integration platform for Audityzer and AuditorSEC",
+  "main": "index.js",
   "scripts": {
-    "install-all": "npm install && npm install --workspace=client && npm install --workspace=server",
-    "dev": "concurrently \"npm --workspace=client start\" \"npm --workspace=server start\"",
-    "build": "npm --workspace=client run build && npm --workspace=server run build",
-    "test": "npm --workspace=client test -- --watchAll=false && npm --workspace=server test",
-    "lint": "npm --workspace=client run lint && npm --workspace=server run lint"
+    "start": "node index.js",
+    "test": "jest"
   },
   "keywords": [
-    "web3",
-    "smart-contract",
-    "security",
     "audit",
+    "security",
+    "web3",
     "audityzer",
     "auditorsec"
   ],
-  "author": "rigoryanych",
+  "author": "",
   "license": "MIT",
+  "dependencies": {
+    "axios": "^1.6.0",
+    "dotenv": "^16.3.0"
+  },
   "devDependencies": {
-    "concurrently": "^8.2.0"
+    "jest": "^29.7.0"
   }
 }
